Finally fixed layout issue

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,12 +1,12 @@
-footer{
-    margin-top: 12.5rem;
+.footer{
+    width: 100%;
+    margin-top: 12rem;
     background-color: #2e2e2e;
 }
 
 .footer-container{
-    padding: 4rem;
+    padding: 4rem 2rem;
     max-width: 1200px;
-    min-width: 800px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
@@ -27,4 +27,11 @@ footer{
     padding:4rem 0rem;
     text-align: center;
     color: #fff;
+}
+
+@media only screen and (max-width: 650px){
+    .footer-container{
+        grid-template-columns: none;
+        grid-template-rows: 0.5fr 1fr 1fr 1fr 1fr;
+    }
 }
