--- a/src/Components/MyProcess/MyProcess.css
+++ b/src/Components/MyProcess/MyProcess.css
@@ -1,4 +1,5 @@
 .my-process{
+    width: 100%;
     display: flex;
     flex-direction: row;
 }
