--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -7,6 +7,7 @@
     height: 3.5rem;
     filter: drop-shadow(0rem 0.25rem 0.5rem rgb(30 22 115 / 0.1));
     align-items: center;
+    z-index: 100;
 }
 
 .sidenav-item-container{
