--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,33 +1,56 @@
-.page-body{
-    max-width: 60rem;
-    margin:0 auto;
-    padding: 0rem 4rem;
+.header-background{
+  width: 100%;
+  min-height: 40rem ;
+  position: absolute;
+  background-image: linear-gradient(120deg,rgba( 255 255 255 / 0),rgba( 255 255 255 / 0), rgba(93 79 255 / 1));
+  z-index: -1;
+  top:0;
+  left: 0;
+  right: 0;
 }
 
-.home-header{
-    margin-top: 10rem ;
+.header-container, .my-work-container{
+  padding: 0rem 2rem;
+  margin-top: 12rem !important;
+  max-width: 60rem;
+  margin: 0 auto;
 }
-.home-header-background{
-    width: 100%;
-    min-height: 40rem ;
-    position: absolute;
-    background-image: linear-gradient(120deg,rgba( 255 255 255 / 0),rgba( 255 255 255 / 0), rgba(93 79 255 / 1));
-    z-index: -1;
-    top:0;
-    left: 0; 
-    right: 0; 
+
+h2{
+  padding-bottom: 1rem;
 }
-.home-header h1{
+.container{
+  padding: 0rem 2rem;
+  margin-top: 8rem !important;
+  max-width: 60rem;
+  margin: 0 auto;
+}
+
+.header-container h1{
     font-size: 4rem;
     margin-top: -1rem;
     color: #2e2e2e;
 }
+
 .header-title{
   width: 50%;
-    margin: 3rem 0rem;
-    font-size: 1.25rem;
-    font-weight: 300;
-    color: #2e2e2e;
+  margin: 3rem 0rem;
+  font-size: 1.25rem;
+  font-weight: 300;
+  color: #2e2e2e;
+}
+
+
+.home-header-socials{
+  margin: 1rem 0rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.home-header-buttons{
+  display: flex;
+  gap: 1rem;
 }
 
 .roundbutton{
@@ -49,26 +72,14 @@
     opacity: 0.9;
   }
 
-  .home-header-socials{
-    margin: 1rem 0rem;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-  }
 
-  .home-header-buttons{
-    display: flex;
-    gap: 1rem;
-  }
-
-  .section-container{
-    margin-top: 12rem;
-  }
-
-  .section-container h2{
-    margin-bottom: 1rem;
-  }
-  
   .home-importanceofux-container, .home-aboutme-container{
     width:60%;
+  }
+
+  @media only screen and (max-width: 600px){
+    .page-body{
+      width: 100%;
+      padding: 0 1rem;
+    }
   }
