--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body,html {
   padding: 0;
   margin: 0;
   width: 100%;
+  min-width: 0;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
